Fixed game css attributes overflowing into global elements. Now css attributes are only accessible through module.css classes.

--- a/client/src/components/PageComponents/game/yodel/Yodel.module.css
+++ b/client/src/components/PageComponents/game/yodel/Yodel.module.css
@@ -7,6 +7,16 @@
     align-items: center;
 }
 
+.button{
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+    background: #928d8c;
+    padding: 22px 18px;
+    border: none;
+    text-transform: uppercase;
+}
+
 .head{
     display: flex;
 }
@@ -105,3 +115,4 @@
     background-color: darkgreen;
     font-size: 1.5rem;
 }
+
